...
    <string name="doubleclick_exit">Нажмите дважды, чтобы выйти</string>
    <string name="app_ver">Версия: %1$s</string>
    <string name="e_mail_sales_quizer_pro">e-mail: sales@quizer.pro</string>
    <string name="_7_909_214_48_33">тел.: +7 909 214 48 33</string>

    <string name="menu_player_map">Menu 1</string>
...
    <string name="button_send">Отправить</string>
    <string name="et_enter_key">Введите ключ</string>
    <string name="empty_key">Ключ активации пуст. Пожалуйста, введите ключ и повторите попытку.</string>
    <string name="wrong_key">Неверный ключ</string>
    <string name="auth_version_warning">Внимание!\nВы работаете на устройстве с версией android %1$s. Стабильная работа приложения не гарантируется.</string>
    <string name="auth_users_on_device">Количество пользователей на данном устройстве: %1$s</string>
...
    <string name="dialog_fake_gps_title">Обнаружено нарушение.</string>
    <string name="dialog_fake_gps_body">На Вашем устройстве используется программа для подмены GPS-координат. Для продолжения работы необходимо её удалить.</string>
    <string name="dialog_close_app_title">Выход из приложения</string>
    <string name="dialog_delete_title">Завершение анкеты</string>
    <string name="dialog_start_title">Начало новой анкеты</string>
...
    <string name="start_questions">Начало новой анкеты</string>
    <string name="start_question_error">Ошибка запуска анкеты. Попробуйте еще раз</string>
    <string name="home_screen">Главный экран</string>
    <string name="quotas_screen">Квоты</string>
    <string name="sync_screen">Синхронизация</string>
    <string name="settings_screen">Настройки</string>
    <string name="about_screen">О нас</string>
    <string name="make_elements_error">Ошибка создания модели анкеты</string>
    <string name="exit_questionnaire_warning">Вы уверены, что хотите принудительно прервать анкету? \nЕё содержимое будет потеряно.</string>
...
    <string name="view_empty_qoutas">Список квот пуст</string>
    <string name="view_button_show_details">Показать детали</string>
    <string name="view_button_hide_details">Скрыть детали</string>
    <string name="view_button_refresh">Обновить</string>
    <string name="view_button_info">INFO</string>
    <string name="view_switch_hide_completed_quotas">Скрыть выполненные</string>
    <string name="view_switch_auto_zoom">Автоматическое маштабирование шрифтов</string>
    <string name="view_switch_dark_mode">Затемнение закрытых квот</string>
    <string name="view_switch_speed">Режим производительности таблиц</string>
    <string name="view_switch_memory">Проверка свободного места</string>
    <string name="view_hint_search">Поиск</string>
    <string name="quota_not_renew_after_send">Квота не обновлена после последней отправки анкеты.</string>
...
    <string name="quota_renewed_after_send">Квота обновлена после последней отправки анкеты.</string>
    <string name="notification_updating">Идет обновление…</string>
    <string name="drawer_home">ГЛАВНЫЙ ЭКРАН</string>
    <string name="drawer_sync">СИНХРОНИЗАЦИЯ</string>
    <string name="drawer_settings">НАСТРОЙКИ</string>
    <string name="drawer_quotas">КВОТЫ</string>
    <string name="drawer_about">О НАС</string>
    <string name="drawer_exit">ВЫЙТИ</string>
    <string name="button_sms">СМС</string>
    <string name="button_send_reg">отправить регистрационные данные</string>
...
    <string name="button_delete_data_quizer">Очистить диск</string>
    <string name="button_clear_db">Очистить базу данных</string>
    <string name="clear_db_title">Очистка базы данных</string>
    <string name="clear_disk_title">Очистка диска</string>
    <string name="button_delete_user">Удалить пользователя</string>
    <string name="button_upload_data">Выгрузить данные</string>
    <string name="button_ftp_upload_data">Отправка через FTP</string>
...
    <string name="button_update_config">Обновить конфиг</string>
    <string name="button_set_config">Применить конфиг</string>
    <string name="button_get_config">Получить конфиг</string>
    <string name="button_renew_reg">Перерегистрироваться</string>
    <string name="button_update_username">Изменить интервьюера</string>
    <string name="view_config_title">Конфигурация</string>
    <string name="view_id">ID: %1$s</string>
    <string name="view_date">Дата: %1$s</string>
    <string name="view_display_settings_title">Настройки отображения</string>
    <string name="view_display_settings_speed">Настройки производительности</string>
    <string name="view_settings_font_size">Размер шрифта в вопросах:</string>
    <string name="view_settings_closed_quota_off">Показ завершенных квот (выкл)</string>
...
    <string name="stop_audio_recording_attempt">Попытка завершения записи аудио</string>
    <string name="load_crash_log_from_db">Чтение краш-лога из базы данных</string>
    <string name="dialog_change_user">Вы уверены, что хотите сменить пользователя?</string>
    <string name="view_exit">Выйти</string>
    <string name="setted">Установлен</string>
...
    <string name="enter_answer_empty">Выберите ответ (не выбрано)</string>
    <string name="enter_answer">Введите ответ</string>
    <string name="data_on_login">Данные в рамках логина:</string>
    <string name="damn_symbol_open">(</string>
    <string name="damn_symbol_close">)</string>
...
