<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cont_home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:saveEnabled="false">

    <pro.quizer.quizer3.view.Toolbar
...
            android:paddingLeft="56dp"
            android:paddingTop="16dp"
            android:paddingRight="56dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/config_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
...
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone"
                tools:text="Экзит пул agreement..." />

            <Button
                android:id="@+id/btn_start"
                style="@style/ButtonAviaWithoutBorder"
                android:layout_width="156dp"
                android:layout_height="56dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
...
                    android:layout_height="56dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/button_continue"
                    android:textSize="@dimen/_10ssp" />

                <Button
                    android:id="@+id/btn_delete"
                    style="@style/ButtonAviaWithoutBorder"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_weight="3"
...
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_exit"
                android:textSize="@dimen/_10ssp" />

            <Button
                android:id="@+id/btn_quotas"
                style="@style/ButtonAviaWithoutBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_start"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/button_quotas"
                android:textSize="@dimen/_10ssp" />

            <Button
                android:id="@+id/btn_info"
                style="@style/ButtonAviaWithoutBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_start"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
...
