<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cont_auth_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:keepScreenOn="true">

    <FrameLayout
...
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone"
                tools:text="@string/auth_users_on_device" />

            <pro.quizer.quizer3.view.element.editspinner.ResizableEditSpinner
                android:id="@+id/login_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/auth_enter_login"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_10ssp" />

            <pro.quizer.quizer3.view.element.edittext.ResizableEditText
                android:id="@+id/auth_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/auth_enter_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_10ssp" />

            <pro.quizer.quizer3.view.element.button.ResizableButton
                android:id="@+id/btn_send_auth"
                style="@style/ButtonAvia"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="24dp"
                android:text="@string/to_enter"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <pro.quizer.quizer3.view.element.textview.SmallResizableTextView
            android:id="@+id/version_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="16dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10ssp"
...
