...
                android:text="@string/view_config_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12ssp"
                tools:text="@string/view_id" />
...
                    android:text="@string/view_display_settings_title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/auto_zoom_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:text="@string/view_switch_auto_zoom"
                    android:textSize="@dimen/_12ssp" />

...
                android:maxLines="1"
                android:text="@string/button_renew_reg"
                android:textSize="@dimen/_12ssp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/update_config"
                style="@style/ButtonGreen"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:maxLines="1"
...
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:text="@string/button_update_username"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/delete_user"
                style="@style/ButtonRed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:maxLines="1"
...
